[gd_scene load_steps=5 format=3 uid="uid://rsvs5gnqqr8d"]

[ext_resource type="Script" uid="uid://ny8l18fayjnd" path="res://scripts/slimes/slime_ash.gd" id="1_dr6uu"]
[ext_resource type="PackedScene" uid="uid://chx4skxp7tgbu" path="res://assets/Art/3d/Slime/Slime.tscn" id="2_56nqy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6nu0y"]
radius = 0.63

[sub_resource type="SphereShape3D" id="SphereShape3D_22mvs"]
radius = 13.0

[node name="SlimeAsh" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_dr6uu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0746541, 0.495757, 0.16989)
shape = SubResource("SphereShape3D_6nu0y")
debug_color = Color(0.787219, 0.410982, 0.360379, 0.42)

[node name="Pivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="SlimeModel" parent="Pivot" instance=ExtResource("2_56nqy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="FlockingZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 2

[node name="FlockingZoneCollisionShape" type="CollisionShape3D" parent="FlockingZone"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_22mvs")

[node name="UpdateAmbientDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="ScatterEffectTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="FlockingZone" to="." method="_on_flocking_zone_body_entered"]
[connection signal="body_exited" from="FlockingZone" to="." method="_on_flocking_zone_body_exited"]
[connection signal="timeout" from="UpdateAmbientDirectionTimer" to="." method="_on_update_ambient_direction_timer_timeout"]
[connection signal="timeout" from="ScatterEffectTimer" to="." method="_on_scatter_effect_timer_timeout"]
